--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -21,7 +21,9 @@
 		"render": "remotion render react-svg",
 		"render-js": "remotion render src/entry.jsx framer",
 		"render-gif": "remotion render framer out/video.gif --codec=gif --every-nth-frame=2",
-		"render-transparent": "remotion render --image-format=png --pixel-format=yuva420p --codec=vp8 react-svg out/video.webm"
+		"render-transparent": "remotion render --image-format=png --pixel-format=yuva420p --codec=vp8 react-svg out/video.webm",
+		"render-swangle": "remotion render GpuTesting out/swangle.mp4 --gl=swangle",
+		"render-angle": "remotion render GpuTesting out/angle.mp4 --gl=angle"
 	},
 	"dependencies": {
 		"@mdx-js/loader": "^2.3.0",
@@ -54,6 +56,7 @@
 		"@types/react": "18.0.26",
 		"@types/styled-components": "^5.1.26",
 		"@types/web": "0.0.78",
+		"@types/three": "^0.144.0",
 		"babel-loader": "^8.2.2",
 		"dotenv": "9.0.2",
 		"lottie-web": "5.12.2",
