--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -71,7 +71,8 @@
 		"ts-unused-exports": "^7.0.1",
 		"use-asset": "^1.0.4",
 		"vitest": "0.31.1",
-		"zod": "^3.22.3"
+		"zod": "^3.22.3",
+		"three": "^0.145.0"
 	},
 	"devDependencies": {
 		"eslint": "8.42.0",
